# xmlsec

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  AUTHORS.md  Android.mk  CMakeLists.txt  ChangeLog  Copyright  HACKING  INSTALL  MAINTAINERS  Makefile.am  NEWS  README  README.md  SECURITY.md  TODO  appveyor.yml  autogen.sh  ci-script-windows.sh  clean.sh  config.h.in  configure.ac  configure.in  globals.h  xmlsec-config.in  xmlsec-gcrypt.pc.in  xmlsec-gnutls.pc.in  xmlsec-nss.pc.in  xmlsec-openssl.pc.in  xmlsec.doap  xmlsec.pc  xmlsec.pc.in  xmlsec.spec  xmlsec.spec.in  xmlsec1.m4  xmlsecConf.sh.in
apps/: .cvsignore  Makefile.am  cmdline.c  cmdline.h  crypto.c  crypto.h  xmlsec.c  xmlsec_unit_tests.c
apps/oss-fuzz/: standalone_fuzz_runner.c  xmlsec_dsig_verify_target.c  xmlsec_target.c
apps/unit_tests/: base64_unit_tests.c  bn_unit_tests.c  buffer_unit_tests.c  list_unit_tests.c  nodeset_unit_tests.c  templates_unit_tests.c  transform_helpers_unit_tests.c  x509_unit_tests.c  xmlsec_unit_tests.c  xmlsec_unit_tests.h  xmltree_unit_tests.c
docs/: .cvsignore  .htaccess  Makefile.am  authors.html  bugs.html  c14n.html  design-overview.html  documentation.html  download.html  example-dsig1.html  example-dsig2.html  example-dsig3.html  example-dsig4.html  example-enc1.html  example-enc2.html  faq.html  index.html  mailing-list.html  news.html  related.html  status.html  xmldsig-interop.html  xmldsig-verifier.html  xmldsig.html  xmlenc-interop.html  xmlenc.html  xmlsec-ga.xsl  xmlsec-man.html  xmlsec.xsl
docs.doxygen/: Doxyfile.in  Makefile.am
docs/api/: .cvsignore  Makefile.am  annotation-glossary.html  index.html  index.sgml  xmlsec-app.html  xmlsec-base64.html  xmlsec-bn.html  xmlsec-buffer.html  xmlsec-buffered.html  xmlsec-ciphers.html  xmlsec-compiling.html  xmlsec-custom-keys-manager.html  xmlsec-debug.html  xmlsec-decl-list.txt  xmlsec-decl.txt  xmlsec-decrypt-with-keys-mngr.html  xmlsec-decrypt-with-signle-key.html  xmlsec-digests.html  xmlsec-dl.html  xmlsec-docs.sgml  xmlsec-encrypt-dynamic-template.html  xmlsec-encrypt-template-file.html  xmlsec-encrypt-with-session-key.html  xmlsec-encryption-klasses.html  xmlsec-errors.html  xmlsec-example-decrypt1.html  xmlsec-example-decrypt2.html  xmlsec-example-decrypt3.html  xmlsec-example-dsig1-res.html  xmlsec-example-dsig1-tmpl.html  xmlsec-example-dsig1.html  xmlsec-example-dsig2-doc.html  xmlsec-example-dsig2-res.html  xmlsec-example-dsig2.html  xmlsec-example-dsig3.html  xmlsec-example-dsig4.html  xmlsec-example-enc1-res.html  xmlsec-example-enc1-tmpl.html  xmlsec-example-enc1.html  (+151 more)
docs/api-0.0.x/: Makefile  Makefile.am  Makefile.in  documentation.html  faq.html  index.html  xmlsec-base64.html  xmlsec-bn.html  xmlsec-buffered.html  xmlsec-ciphers.html  xmlsec-debug.html  xmlsec-digests.html  xmlsec-errors.html  xmlsec-io.html  xmlsec-keyinfo.html  xmlsec-keys.html  xmlsec-keysinternal.html  xmlsec-keysmngr.html  xmlsec-man.html  xmlsec-membuf.html  xmlsec-nodeset.html  xmlsec-notes.html  xmlsec-ref-int.html  xmlsec-ref.html  xmlsec-transforms.html  xmlsec-transformsinternal.html  xmlsec-undocumented.txt  xmlsec-unused.txt  xmlsec-version.html  xmlsec-x509.html  xmlsec-xmldsig.html  xmlsec-xmlenc.html  xmlsec-xmlsec.html  xmlsec-xmltree.html  xmlsec.sgml
docs/architecture/: .cvsignore  design-overview.html  diagrams.sxd  status.html
docs/examples/: Makefile.am  custom-keys-manager.html  decrypt-with-keys-mngr.html  decrypt-with-signle-key.html  encrypt-dynamic-template.html  encrypt-template-file.html  encrypt-with-session-key.html  examples-sign-dynamimc-template.html  examples-sign-enveloped-x509.html  examples-sign-id-attr-x509.html  examples-sign-template-file.html  index.html  verify-enveloped-with-x509.html  verify-node-with-x509.html  verify-with-key.html  verify-with-keys-mngr.html  verify-with-restrictions.html  xmlsec.devhelp2
docs/extra/: xmlsec_oscon_2003.ppt
docs/html/: Makefile.am  authors.html  bugs.html  c14n.html  documentation.html  download.html  faq.html  index.html  mailing-list.html  news.html  pandoc-template.html5  related.html  xmldsig-verifier.html  xmldsig.html  xmlenc.html  xmlsec-man.html  xmlsec.xsl
docs/md/: Makefile.am  authors.md  bugs.md  c14n.md  documentation.md  download.md  faq.md  index.md  key-formats.md  news.md  related.md  xmldsig.md  xmlenc.md
docs/sgml/: Makefile.am
docs/tutorial/: Makefile.am  compiling-others.html  compiling-unix.html  compiling-windows.html  compiling.html  contexts.html  custom-keys-store.html  decrypt.html  dynamic-encryption-templates.html  dynamic-signature-templates.html  encrypt.html  include-files.html  index.html  init-shutdown.html  keys-manager-sign-enc.html  keys-mngr-verify-decrypt.html  keys.html  keysmngr.html  overview.html  (+59 more)
examples/: .cvsignore  Makefile  Makefile.am  Makefile.w32  README  README.md  README.txt  autogen.sh  config.h.in  configure.in  decrypt1.c  decrypt2.c  decrypt3.c  dsig1-res.xml  dsig1-tmpl.xml  dsig1.c  dsig2-doc.xml  dsig2-res.xml  dsig2.c  dsig3.c  dsig4.c  enc1-res.xml  enc1-tmpl.xml  enc1.c  enc2-doc.xml  enc2-res.xml  enc2.c  enc3-doc.xml  enc3-res.xml  enc3.c  enc4.c  enc5.c  enc6.c  encrypt1-tmpl.xml  encrypt1.c  encrypt2.c  encrypt3-res.xml  encrypt3.c  myw32make.bat  mywin32make.bat  (+24 more)
man/: .cvsignore  Makefile.am  create.sh  xmlsec-config.1  xmlsec.1  xmlsec.xml  xmlsec1-config.1  xmlsec1.1
src/: .cvsignore  Makefile.am  aes.c  app.c  base64.c  bn.c  buffer.c  buffered.c  c14n.c  cast_helpers.h  ciphers.c  debug.c  des.c  digests.c  dl.c  dsa.c  enveloped.c  errors.c  errors_helpers.h  globals.h  hmac.c  io.c  keyinfo.c  keys.c  keysdata.c  keysdata_helpers.c  keysdata_helpers.h  keysmngr.c  keyvalue.c  kw_aes_des.c  kw_aes_des.h  kw_helpers.c  kw_helpers.h  list.c  map.c  membuf.c  nodeset.c  object.c  parser.c  relationship.c  (+29 more)
tests/: .cvsignore  Makefile.am  README  README.md  keys.xml  nss.supp  openssl.supp  openssl3.cnf  test.txt  testAddKeyValue.sh  testDSig.sh  testEnc.sh  testKeys.sh  testRes.sh  testXKMS.sh  testrun.sh  valgrind-gcrypt.supp  valgrind-nss.supp  valgrind-openssl.supp
(+2849 files in other folders)
